# WEAVER

./: .gitignore  .gitmodules  LICENSE  README.md  index.html  pyproject.toml  styles.css
datasets/: README.md  compute_norm_stats.py  preprocess_droid.py  preprocess_droid.sh  preprocess_droid_ood.py
scripts/: _env.sh  compute_eval_metrics.sh  evaluate_wm.sh  finetune.sh  pretrain.sh  reflow.sh  replay_reward.sh  steer_pi_policy.sh  synth_data_gen.sh
weaver/: __init__.py  config.yaml  finetune.py  generate_views.py  pretrain.py  reflow.py  replay_traj_reward.py  steer_pi_policy.py  synth_data_gen.py
weaver/datasets/: __init__.py  dataset.py  droid.py
weaver/dynamics/: __init__.py  model.py  model2_15_14.pth  train.py
weaver/robot/: actions.py  fk.py  panda.py
weaver/utils/: __init__.py  config.py  eval.py  metrics.py  model_metrics.py  tools.py  viz.py  wm_eval.py
weaver/wm/: __init__.py  decoders.py  encoders.py  model.py  nets.py
